# deeplearning-repo-2

./: .gitignore  README.md  requirements.txt
AI_Server/: README.md  udp_ped_receiver.py
PED/: ped_main.py  udp_sender.py
Server/: README.md  fire-detect-server.py  fire_manager_demo.py  fire_state.yaml  receive_video_udp_service.py  run_fire_server.sh
dataService/: DS_SD_receiver.py  TCP_receiver.py  TCP_sender.py  dS_sD_Server.py  dS_sD_Server_1.py  dS_sD_Server_2.py  dS_sD_Server_2_backup.py  dS_sD_Server_3.py  dS_sD_client.py  dS_sD_client_1.py  data_sv_gui_server3.py  data_sv_gui_server4.py  data_sv_gui_server_v4.py  data_sv_rec_sd.py  log2.py  log_viewer_tcp.py  network_client.py
deviceManager/: CMakeLists.txt  TCPClientManager.cpp  Tcp_client_manager.py  deviceManager.bash  deviceManager.cpp  deviceManager.hpp  deviceManager.py  ped_main.py  tcp_ai_sender.py
deviceManager/include/: TCPClientManager.hpp  deviceManager.hpp
deviceManager/lib/: libfmodstudio.so.14  libfmodstudioL.so.14
feat_detect_fire/: README.md  data.yaml  fire-detect-client.py  fire-detect-server.py  run_client.sh
feat_detect_fire_smoking/: fire-detect-client.py  fire-detect-server.py  run_client.sh  run_server.sh
feat_detect_smoke/: Smoking_YOLOv8.ipynb
feat_detect_trash/: 3_train.py  README.md
monitoringGUI/: GUI.py  GUI1.py  GUI_mul.py  GUI_test2.py  GUI_tet1.py  TCP_SD2MG.py  dashboard_main.py  dashboard_main_test.py  log_viewer.py  log_viewer.ui  log_viewer2.py  main.py  main_dashboard.py  main_dashboard.ui  police.py  stream_server.py  tcp_db_sender.py  test_server.py  (+3 more)
(+148 files in other folders)
